Sutter Health/src/objects/S3_Ops__c.object
<CustomObject>
    <description>This object will house all metric statements (SLAs, OLAs, IOMs) and any change request (budget, deployment, org chart change, LEAN project) that is part of the Service and Performance Management workflow.</description>
    <fields>
        <fullName>Accenture_Comments__c</fullName>
        <description>Comments from the initial metric setup and Accenture discovery process</description>
        <inlineHelpText>Comments from the initial metric setup and Accenture discovery process</inlineHelpText>
        <label>Accenture Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Metrics can be active or inactive</description>
        <inlineHelpText>Is this metric active? (Can be active yet not reported)</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternative__c</fullName>
        <description>Captures information for alternative ideas if this metric is difficult to calculate</description>
        <inlineHelpText>Describe any alternatives</inlineHelpText>
        <label>Alternative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_Start_Date__c</fullName>
        <label>Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Release__c</fullName>
        <label>Business Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAG_Approval__c</fullName>
        <inlineHelpText>When was this request approved by CAG?</inlineHelpText>
        <label>CAG Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chargeback_Type_of_Change__c</fullName>
        <label>Chargeback Type of Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the metric is being reported on.  For reporting purposes, if the metric is active and not being currently reported, there should be an explanation why.</description>
        <inlineHelpText>Is this record being reported on an ongoing basis?</inlineHelpText>
        <label>Currently Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <inlineHelpText>The date the position and/or cost will begin</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Impact__c</fullName>
        <description>Users entered the financial impact of the change request</description>
        <inlineHelpText>What is the total dollar impact for the current fiscal year?  Additional information can be entered in the comments section</inlineHelpText>
        <label>Financial Impact</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Reported_Date__c</fullName>
        <description>This date should be within a certain time period from the metric and business release go-live</description>
        <inlineHelpText>What date was this metric first reported out?</inlineHelpText>
        <label>First Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <inlineHelpText>(you may select more than one)</inlineHelpText>
        <label>Fiscal Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>This is the functional area within S3</description>
        <inlineHelpText>What is the functional area that relates to this record?</inlineHelpText>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biomedical Technology</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Credentialing Verification</fullName>
                </value>
                <value>
                    <fullName>Cross-Functional</fullName>
                </value>
                <value>
                    <fullName>Document Management Center</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Revenue Cycle</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headcount__c</fullName>
        <inlineHelpText>What is the quantity you are requesting?</inlineHelpText>
        <label>Headcount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Cost__c</fullName>
        <inlineHelpText>What is the initial cost of this request?</inlineHelpText>
        <label>Initial Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interim_Solution__c</fullName>
        <inlineHelpText>What are we doing to report this if there is an issue?</inlineHelpText>
        <label>Interim Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manually Reported</fullName>
                </value>
                <value>
                    <fullName>Excel Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Not Reported</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Comments__c</fullName>
        <description>This lets users describe what is happening with the issue</description>
        <inlineHelpText>Keep the comments up to date when working toward solving this records issue (SPM team only)</inlineHelpText>
        <label>Issue Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <description>For tracking when this issue was first identified</description>
        <inlineHelpText>For tracking when this issue was first identified</inlineHelpText>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Expected_Resolution__c</fullName>
        <description>For tracking when this issue is expected to be resolved or when to trigger the next step in the process</description>
        <inlineHelpText>When will this be resolved?</inlineHelpText>
        <label>Issue Expected Resolution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L1__c</fullName>
        <formula>if (ISPICKVAL( Function__c , &quot;Finance&quot;), &quot;Eric Dalton&quot;, &quot;Not Eric&quot;)</formula>
        <label>L1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The functions L1</description>
        <inlineHelpText>Who is the L1 for this function responsible for this record?</inlineHelpText>
        <label>Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>S3_Operations_L1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metric_Calculation__c</fullName>
        <description>This describes how to formulate the metric</description>
        <inlineHelpText>Describe the formula to calculate the metric</inlineHelpText>
        <label>Metric Calculation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Metric_Output__c</fullName>
        <label>Metric Output</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Statement__c</fullName>
        <description>Describes the Metric</description>
        <inlineHelpText>Metric Statement as approved by Steering</inlineHelpText>
        <label>Metric Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Metric_Trigger__c</fullName>
        <description>Describes the reasoning for when this metric is captured</description>
        <inlineHelpText>What triggers the capturing of this information? (i.e.: every payroll process)</inlineHelpText>
        <label>Metric Trigger</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Metric_Type__c</fullName>
        <description>the type of metric for this metric statement</description>
        <inlineHelpText>SLA - Main metric reported to clients about S3 performance 
OLA - Tracks Client responsiveness/performance to help S3 achieve its goals 
IOM-periodic review of data that supports tracking SLA progress</inlineHelpText>
        <label>Metric Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SLA</fullName>
                </value>
                <value>
                    <fullName>OLA</fullName>
                </value>
                <value>
                    <fullName>IOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_add_or_change__c</fullName>
        <label>Net add or change</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Approver__c</fullName>
        <formula>if (L1__c &lt;&gt; (CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName),  L1__c , 
(if(   ISBLANK( CAG_Approval__c ) , &quot;CAG Approval&quot;,
(if (  ISBLANK( Steering_Co_Approval__c ), &quot;Steering Committee&quot;,
(if ( isblank(SSLT_Approval__c), &quot;SSLT&quot;, &quot;Approved&quot;)) 
))
))
)</formula>
        <label>Next Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <description>Description of the Change Request</description>
        <inlineHelpText>Description of the Change Request</inlineHelpText>
        <label>Objective</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ops_Issue__c</fullName>
        <description>This identifies what the SPM team is experiencing with this request</description>
        <inlineHelpText>This describes why this request may be stalled.</inlineHelpText>
        <label>Ops Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Request Process</fullName>
                </value>
                <value>
                    <fullName>Data Does Not Exist</fullName>
                </value>
                <value>
                    <fullName>Data Not Available</fullName>
                </value>
                <value>
                    <fullName>Needs Additional Information</fullName>
                </value>
                <value>
                    <fullName>Report Does Not Exist</fullName>
                </value>
                <value>
                    <fullName>Workflow Change</fullName>
                </value>
                <value>
                    <fullName>Large Manual Effort</fullName>
                </value>
                <value>
                    <fullName>Verify with Business Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCD__c</fullName>
        <label>PCD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_Currently_Filed__c</fullName>
        <label>Position Currently Filed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <inlineHelpText>Position Name from the PDC Master Headcount list</inlineHelpText>
        <label>Position Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Service &amp; Performance Management Speciliast</fullName>
                </value>
                <value>
                    <fullName>Revenue Cycle Leader</fullName>
                </value>
                <value>
                    <fullName>Human Resources Leader</fullName>
                </value>
                <value>
                    <fullName>Human Resources Director</fullName>
                </value>
                <value>
                    <fullName>Finance Leader</fullName>
                </value>
                <value>
                    <fullName>Supply Chain Leader</fullName>
                </value>
                <value>
                    <fullName>Integration Leader</fullName>
                </value>
                <value>
                    <fullName>Contact Center Leader</fullName>
                </value>
                <value>
                    <fullName>Service and Performance Management Leader</fullName>
                </value>
                <value>
                    <fullName>Executive Assistant to SVP Shared Services</fullName>
                </value>
                <value>
                    <fullName>Administrative Assistant to Human Resources Lead</fullName>
                </value>
                <value>
                    <fullName>Administrative Assistant to Supply Chain Lead</fullName>
                </value>
                <value>
                    <fullName>Administrative Assistant to Finance Lead</fullName>
                </value>
                <value>
                    <fullName>Administrative Assistant to Revenue Cycle Lead</fullName>
                </value>
                <value>
                    <fullName>Desktop Support Team Member</fullName>
                </value>
                <value>
                    <fullName>HR Business Partner</fullName>
                </value>
                <value>
                    <fullName>Training Lead</fullName>
                </value>
                <value>
                    <fullName>Service and Performance Management Specialist</fullName>
                </value>
                <value>
                    <fullName>Financial Manager</fullName>
                </value>
                <value>
                    <fullName>Process Improvement Specialist</fullName>
                </value>
                <value>
                    <fullName>Facilities and Landlord Relationship Coordinator</fullName>
                </value>
                <value>
                    <fullName>Receptionist</fullName>
                </value>
                <value>
                    <fullName>CBO Leader</fullName>
                </value>
                <value>
                    <fullName>Claims Lead</fullName>
                </value>
                <value>
                    <fullName>Claims Team Lead</fullName>
                </value>
                <value>
                    <fullName>Senior Claims Team Member</fullName>
                </value>
                <value>
                    <fullName>Claims Team Member</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Follow-Up Team Member</fullName>
                </value>
                <value>
                    <fullName>Senior Self-Pay Follow-Up Team Member</fullName>
                </value>
                <value>
                    <fullName>Bad Debt and Charity Team Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>sets the priority for the metric or change request</description>
        <inlineHelpText>Critical - broken process
High - business impact
Medium - 
Low - would like to have, can live without</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Step__c</fullName>
        <description>Used in the automated approval process</description>
        <inlineHelpText>Used in the automated approval process</inlineHelpText>
        <label>Process Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operational Team Review</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CAG Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Steering Committee Approval Pending</fullName>
                </value>
                <value>
                    <fullName>SSLT Approval Pending</fullName>
                </value>
                <value>
                    <fullName>-None-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>For reporting record counts</description>
        <label>Record Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence__c</fullName>
        <inlineHelpText>How often will this cost occur?</inlineHelpText>
        <label>Recurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Costs__c</fullName>
        <label>Recurring Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Builder__c</fullName>
        <description>tracks the person building the reports for SPM</description>
        <inlineHelpText>Who do we go to with report questions?</inlineHelpText>
        <label>Report Builder</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Owner__c</fullName>
        <description>Own the report but may not build it</description>
        <inlineHelpText>Report Owner may be different from builder and L1/L2</inlineHelpText>
        <label>Report Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Title__c</fullName>
        <description>Request title should summarize the request for easy identification in a list of requests</description>
        <inlineHelpText>Request title should summarize the request for easy identification in a list of requests</inlineHelpText>
        <label>Request Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPMSpecialist__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <label>SPMSpecialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPM_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track who is responsible for this record if the owner is unavailable</description>
        <inlineHelpText>Which SPM Specialist serves as a backup to the record owner?</inlineHelpText>
        <label>SPM Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>S3_Operations_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPM_Comments__c</fullName>
        <description>A place to put comments for anything going on with this metric or request</description>
        <label>SPM Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPM_Effort__c</fullName>
        <description>To track average time spent on the calculation/request</description>
        <inlineHelpText>Enter time spent (in minutes) to complete the calculation on a weekly basis</inlineHelpText>
        <label>SPM Effort</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSLT_Approval__c</fullName>
        <inlineHelpText>When was this approved by SSLT</inlineHelpText>
        <label>SSLT Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Catalog__c</fullName>
        <description>Name of the Service Catalog Metric statement resides</description>
        <inlineHelpText>What is the name of the Service Catalog that the Metric statement resides or will appear on</inlineHelpText>
        <label>Service Catalog</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Service Management (eQuip 3rd Party)</fullName>
                </value>
                <value>
                    <fullName>Administer Job Evaluation Process</fullName>
                </value>
                <value>
                    <fullName>Answer Inquiries - Self Service</fullName>
                </value>
                <value>
                    <fullName>Asset Disposition Management</fullName>
                </value>
                <value>
                    <fullName>Benefits Administration</fullName>
                </value>
                <value>
                    <fullName>Cash Collections for Hospital Accounts Receivables</fullName>
                </value>
                <value>
                    <fullName>Close Month End</fullName>
                </value>
                <value>
                    <fullName>Contingent Staffing &amp; Strike Replacement Support</fullName>
                </value>
                <value>
                    <fullName>Contract Data Support</fullName>
                </value>
                <value>
                    <fullName>Customer Service- Hospital Patient Billing Inquiries</fullName>
                </value>
                <value>
                    <fullName>Data Support and Reporting Services &amp; Exit Management Support</fullName>
                </value>
                <value>
                    <fullName>Develop and Deliver Reports</fullName>
                </value>
                <value>
                    <fullName>Document Management</fullName>
                </value>
                <value>
                    <fullName>Enterprise Master Patient Index (EMPI)</fullName>
                </value>
                <value>
                    <fullName>eQuip Tech: Repair</fullName>
                </value>
                <value>
                    <fullName>eQuip Tech: Scheduled Maintenance</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset &amp; Capital Budget Reporting</fullName>
                </value>
                <value>
                    <fullName>Hospital Accounts Receivables Management</fullName>
                </value>
                <value>
                    <fullName>Hospital Billing</fullName>
                </value>
                <value>
                    <fullName>Hospital Charge Description Master Maintenance – Add, Change and/or Inactivate Charge Code</fullName>
                </value>
                <value>
                    <fullName>Hospital Charge Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Hospital Check-in / Registration</fullName>
                </value>
                <value>
                    <fullName>Hospital Coding</fullName>
                </value>
                <value>
                    <fullName>Hospital Financial Counseling</fullName>
                </value>
                <value>
                    <fullName>Hospital HIM Document Imaging</fullName>
                </value>
                <value>
                    <fullName>Hospital Patient Price Estimates for Prospective Patients</fullName>
                </value>
                <value>
                    <fullName>Hospital Pre-service Financial Clearance</fullName>
                </value>
                <value>
                    <fullName>Hospital Release of Information (ROI)</fullName>
                </value>
                <value>
                    <fullName>Hospital Transcription</fullName>
                </value>
                <value>
                    <fullName>Hospital Unscheduled Financial Clearance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stabilization_metric__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Any SLA or IOM can be marked as double reporting for the stabilization period based on the deployment schedule.</description>
        <inlineHelpText>Has this metric been flagged to report during the stabilization period?</inlineHelpText>
        <label>Stabilization metric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Tracks the point in the approval process this</description>
        <inlineHelpText>What point in the approval process is this request?</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cross-Functional Approval Pending</fullName>
                </value>
                <value>
                    <fullName>CAG Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Steering Committee Approval Pending</fullName>
                </value>
                <value>
                    <fullName>SSLT Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected: Additional Information Needed</fullName>
                </value>
                <value>
                    <fullName>Retracted</fullName>
                </value>
                <value>
                    <fullName>Discountinued</fullName>
                </value>
                <value>
                    <fullName>Pending Approval Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steering_Co_Approval__c</fullName>
        <inlineHelpText>When was this approved by Steering Committee</inlineHelpText>
        <label>Steering Committee aproval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <description>Determines the sub-function within S3.  Controlled by the Function</description>
        <inlineHelpText>What is the sub-function for this record?</inlineHelpText>
        <label>Sub-Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>CBO</fullName>
                </value>
                <value>
                    <fullName>Charge Capture</fullName>
                </value>
                <value>
                    <fullName>Compensation &amp; Benefits</fullName>
                </value>
                <value>
                    <fullName>eQuip Services</fullName>
                </value>
                <value>
                    <fullName>eQuip Tech</fullName>
                </value>
                <value>
                    <fullName>HIM</fullName>
                </value>
                <value>
                    <fullName>HR Data &amp; Reporting</fullName>
                </value>
                <value>
                    <fullName>Learning &amp; Workforce Relations</fullName>
                </value>
                <value>
                    <fullName>Medical Physics</fullName>
                </value>
                <value>
                    <fullName>Patient Access</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Travel and Expense</fullName>
                </value>
                <value>
                    <fullName>HRIS</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Credentialing Verification</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>DMC</fullName>
                </value>
                <value>
                    <fullName>Internal HR</fullName>
                </value>
                <value>
                    <fullName>Performance Mgmt</fullName>
                </value>
                <value>
                    <fullName>Executive Assistant</fullName>
                </value>
                <value>
                    <fullName>Administrative Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supports_SLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What SLA does this IOM support</inlineHelpText>
        <label>Supports SLA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>S3_Ops__c.RecordTypeId</field>
                <operation>equals</operation>
                <valueField>$Source.RecordTypeId</valueField>
            </filterItems>
            <filterItems>
                <field>S3_Ops__c.Function__c</field>
                <operation>equals</operation>
                <valueField>$Source.Function__c</valueField>
            </filterItems>
            <filterItems>
                <field>S3_Ops__c.Metric_Type__c</field>
                <operation>notEqual</operation>
                <valueField>$Source.Metric_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>S3_Ops__c</referenceTo>
        <relationshipLabel>SLA Link</relationshipLabel>
        <relationshipName>S3_Operations_Self_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAT__c</fullName>
        <description>Turn around time within the metric statement</description>
        <inlineHelpText>What is the turn-around time that this metric is being calculated against? For example, 3 business days = 3</inlineHelpText>
        <label>TAT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Metric__c</fullName>
        <description>Identifies the target for the metric</description>
        <inlineHelpText>What is the target for this metric?</inlineHelpText>
        <label>Target (Metric)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>